--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
   <section>
     <h2>🎁 Join the Airdrop</h2>
     <p>Drop your wallet address below and get FREE BMBR tokens after launch!</p>
-    <form id="airdropForm" action="https://formspree.io/f/moqgykvd" method="POST">
+    <form id="airdropForm" action="https://formspree.io/f/xrbqlwpk" method="POST">
       <input type="text" name="wallet" placeholder="Your Polygon Wallet Address" required />
       <br />
       <input type="email" name="email" placeholder="Email (optional)" />
