--- a/index.html
+++ b/index.html
@@ -85,18 +85,29 @@
     </ul>
   </section>
 
-  <section>
+ <section>
     <h2>🎁 Join the Airdrop</h2>
     <p>Drop your wallet address below and get FREE BMBR tokens after launch!</p>
+    <!-- Formulário do Airdrop -->
     <form id="airdropForm" action="https://formspree.io/f/xrbqlwpk" method="POST">
-      <input type="text" name="wallet" placeholder="Your Polygon Wallet Address" required />
-      <br />
-      <input type="email" name="email" placeholder="Email (optional)" />
-      <br />
-      <button type="submit" class="btn">Join Airdrop</button>
-      <div id="formMessage"></div>
+        <div style="text-align:left; margin-bottom: 20px;">
+            <label for="wallet" style="display:block; font-weight: bold; color: #fff;">Your Polygon Wallet Address</label>
+            <input type="text" id="wallet" name="wallet" placeholder="Enter your Polygon Wallet Address" required style="width:100%; padding: 10px; border-radius: 5px; border: 1px solid #ccc;" />
+        </div>
+
+        <div style="text-align:left; margin-bottom: 20px;">
+            <label for="email" style="display:block; font-weight: bold; color: #fff;">Email (Optional)</label>
+            <input type="email" id="email" name="email" placeholder="Enter your email (optional)" style="width:100%; padding: 10px; border-radius: 5px; border: 1px solid #ccc;" />
+        </div>
+
+        <div>
+            <button type="submit" class="btn" style="background-color:#00f7ff; color:#000; padding: 10px 20px; border-radius: 20px; font-weight: bold; cursor: pointer;">Join Airdrop</button>
+        </div>
+
+        <div id="formMessage" style="margin-top: 15px; color: lightgreen;"></div>
     </form>
-  </section>
+</section>
+
 
   <section>
     <h2>🌐 Social Links</h2>
